# tracker-server

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DEPLOY.md  README.md  SECURITY.md
.github/workflows/: ci.yml
config/: tracker-server.service  tracker.conf
dashboard/: .env.example  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx
docker/: Dockerfile  docker-compose.yml  nginx.conf  supervisor.conf
scripts/: apply_production.py  deep_diagnose.py  deploy_shutdown_fix.py  deploy_upload.py  diagnose_stats.py  finish_deploy.py  init.sh  quick_check.py  recover_services.py  setup_nginx.sh  setup_nginx_alt_port.py  setup_swap.sh  smoke_test.sh  stabilize_web.py  verify_deploy.py
scripts/archive/: README.md  check_remote.py  deploy_http_fix.py  deploy_remote.py  deploy_stats_fix.py  deploy_tracker_fix.py  diagnose_tracker.py  diagnose_web.py  fix_api_proxy.py  fix_web_access.py  resume_deploy.py  start_service.py  upload_src_build.py
sql/: init.sql
src/: main.cpp
src/api/: http_server.cpp  http_server.hpp  rest_api.cpp  rest_api.hpp
src/database/: connection_pool.cpp  connection_pool.hpp  db_manager.cpp  db_manager.hpp
src/tracker/: bep_handler.cpp  bep_handler.hpp  tracker_server.cpp  tracker_server.hpp
src/utils/: config.cpp  config.hpp  logger.cpp  logger.hpp  sql_util.cpp  sql_util.hpp
